k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-dashborad
  namespace: task-dashborad

spec:
  ingressClassName: nginx

  rules:
    - host: task-dashboard.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: task-dashborad
                port:
                  number: 80
